# sandbox

./: go.mod
algorithms/: CMakeLists.txt  Dockerfile  WORKSPACE
algorithms/CMake/: ClangTidy.cmake  FetchAbseil.cmake
algorithms/binary-search/: BUILD  CMakeLists.txt  binary_search.h  binary_search_test.cc
algorithms/selection-sort/: BUILD  CMakeLists.txt  selection_sort.h  selection_sort_test.cc
algorithms/tools/: clang_tidy.sh  generate_compilation_database.sh
cpp/: Dockerfile
cpp/algorithms/: WORKSPACE
cpp/algorithms/binary-search/: binary-search.h
grpc-http/: Dockerfile  docker-compose.yaml  go.mod  go.sum
grpc-http/client/: main.go
grpc-http/docker/app/: Dockerfile
grpc-http/docker/common/: Dockerfile
grpc-http/docker/envoy/: Dockerfile
grpc-http/guestbook/: guestbook.pb.go  guestbook.proto
grpc-http/proxy/: Dockerfile  envoy.yaml
grpc-http/server/: main.go
logan/: CMakeLists.txt
logan/CMake/: FetchGoogleTest.cmake
logan/src/: CMakeLists.txt  logan.cc  logan.h  logan_test.cc
